
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
        <item android:id="@+id/entry0" android:title="@string/mainmenu_entry0" android:icon="@drawable/png_defaultmenuicon"/>
        <item android:id="@+id/entry1" android:title="@string/mainmenu_entry1" android:icon="@drawable/png_defaultmenuicon"/>
        <item android:id="@+id/entry2" android:title="@string/mainmenu_entry2" android:icon="@drawable/png_defaultmenuicon"/>
        <item android:id="@+id/entry3" android:title="@string/mainmenu_entry3" android:icon="@drawable/png_defaultmenuicon"/>
        <item android:id="@+id/entry4" android:title="@string/mainmenu_entry4" android:icon="@drawable/png_defaultmenuicon"/>
        <item android:id="@+id/entry5" android:title="@string/mainmenu_entry5" android:icon="@drawable/log_out_icon"/>
  </group>
</menu>

